[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
]

[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
name = 'pallet-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.1'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
version = '2.0.0-alpha.1'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
version = '2.0.0-alpha.1'
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
version = '2.0.0-alpha.1'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
version = '2.0.0-alpha.1'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
version = '2.0.0-alpha.1'
